Support NextDNS hostname rewrites and migrate OpenAI to COMSS pool
Use three parent CNAME rewrites, suppress lower-priority child overrides, retain IP rules and BLOCK behavior. Add offline dry-run and 27 tests. Expected profile: 1089 to 1005, no changes outside the three OpenAI zones.